[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "instaharvest"
version = "2.5.3"
description = "Professional Instagram data collection toolkit with automation features"
readme = "README.md"
authors = [
    {name = "Doston", email = "kelajak054@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
keywords = [
    "instagram",
    "scraper",
    "automation",
    "data-collection",
    "social-media",
    "instagram-api",
    "instagram-bot",
    "followers",
    "web-scraping",
    "playwright"
]
requires-python = ">=3.8"
dependencies = [
    "playwright>=1.40.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/mpython77/insta-harvester"
Documentation = "https://github.com/mpython77/insta-harvester#readme"
Repository = "https://github.com/mpython77/insta-harvester"
"Bug Tracker" = "https://github.com/mpython77/insta-harvester/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["instaharvest*"]
exclude = ["tests*", "examples*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
